--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="description" content="Ohmyfood">
+    <link rel="stylesheet" href="style.css">
     <title>Ohmyfood</title>
 </head>
 <body>
+    <header>
+        <a href="index.html"><h1>ohmyfood</h1></a>
+    </header>
     <h1>Mentions légales</h1>
 </body>
 </html>
