Correction suite session mentor 06-06-20

--- a/menu_quatre.html
+++ b/menu_quatre.html
@@ -64,7 +64,7 @@
     </section>
     
     <footer>
-        <h2>Mentions légales</h2>
+        <h2><a href="mentionslegales.html" target="_blank">Mentions légales</a></h2>
         <h2><a href="mailto:ohmyfood@contact.com">Contactez-nous</a></h2>
     </footer>
     
