--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </aside>
         
         <footer>
-            <h2><a href="mentionslegales.html" target="_blank">Mentions légales</a></h2>
+            <h2><a href="mentionslegales.html">Mentions légales</a></h2>
             <h2><a href="mailto:ohmyfood@contact.com">Contactez-nous</a></h2>
         </footer>
         
