--- a/menu_quatre.html
+++ b/menu_quatre.html
@@ -14,7 +14,7 @@
         <a href="index.html"><h1>ohmyfood</h1></a>
     </header>
     
-    <section class="menu_section">
+    <section id="menu_section_quatre" class="menu_section">
         <h2 class="arabicfont">La palette du gout</h2>
         <div id="menu_carte_quatre" class="menu_carte">
             <h3 id='dancing_scriptregular'>La palette du goût</h3>
@@ -23,7 +23,7 @@
                 <img class="trait" src="menu_quatre_trait(1).png" alt="trait"/>
                 <div class="categorie">
                     <h4>Esquisse</h4>
-                    <div id="underline_quatre" class="underline"></div>
+                    <div class="underline"></div>
                 </div>
                 <img class="trait" src="menu_quatre_trait(2).png" alt="trait"/>
             </div>
@@ -37,7 +37,7 @@
                 <img class="trait" src="menu_quatre_trait(3).png" alt="trait"/>
                 <div class="categorie">
                     <h4>Oeuvre de maître</h4>
-                    <div id="underline_quatre" class="underline"></div>
+                    <div class="underline"></div>
                 </div>
                 <img class="trait" src="menu_quatre_trait(4).png" alt="trait"/>
             </div>
@@ -51,7 +51,7 @@
                 <img class="trait" src="menu_quatre_trait(5).png" alt="trait"/>
                 <div class="categorie">
                     <h4>Au sommet de l'art</h4>
-                    <div id="underline_quatre" class="underline"></div>
+                    <div class="underline"></div>
                 </div>
                 <img class="trait" src="menu_quatre_trait(6).png" alt="trait"/>
             </div>
