--- a/menu_un.html
+++ b/menu_un.html
@@ -14,7 +14,7 @@
         <a href="index.html"><h1>ohmyfood</h1></a>
     </header>
     
-    <section class="menu_section">
+    <section id="menu_section_un" class="menu_section">
         <h2 class="arabicfont">La note enchantée</h2>
         <div id="menu_carte_un" class="menu_carte">
             <div class="note"><i id="note_un" class="fas fa-music"></i></div>
@@ -24,7 +24,7 @@
                 <img class="trait" src="menu_un_trait(1).png" alt="trait"/>
                 <div class="categorie">
                     <h4>Prélude</h4>
-                    <div id="underline_un" class="underline"></div>
+                    <div class="underline"></div>
                 </div>
                 <img class="trait" src="menu_un_trait(2).png" alt="trait"/>
             </div>
@@ -39,7 +39,7 @@
                 <img class="trait" src="menu_un_trait(3).png" alt="trait"/>
                 <div class="categorie">
                     <h4>Point d'orgue</h4>
-                    <div id="underline_un" class="underline"></div>
+                    <div class="underline"></div>
                 </div>
                 <img class="trait" src="menu_un_trait(4).png" alt="trait"/>
             </div>
@@ -53,7 +53,7 @@
                 <img class="trait" src="menu_un_trait(5).png" alt="trait"/>
                 <div class="categorie">
                     <h4>Mouvement final</h4>
-                    <div id="underline_un" class="underline"></div>
+                    <div class="underline"></div>
                 </div>
                 <img class="trait" src="menu_un_trait(6).png" alt="trait"/>
             </div>
